force-app/main/default/objects/DvsSetting__mdt/DvsSetting__mdt.object-meta.xml
<CustomObject>
    <description>DVS setting</description>
    <label>DVS Setting</label>
    <pluralLabel>DVS Settings</pluralLabel>
</CustomObject>