force-app/main/default/objects/DvsSetting__mdt/fields/CountryCode__c.field-meta.xml
<CustomField>
    <fullName>CountryCode__c</fullName>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FR</fullName>
                <default>true</default>
                <label>FR</label>
            </value>
            <value>
                <fullName>GB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>