force-app/main/default/objects/DvsSetting__mdt/fields/DvsId__c.field-meta.xml
<CustomField>
    <fullName>DvsId__c</fullName>
    <label>DVS ID (token retrieval)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>