force-app/main/default/objects/DvsSetting__mdt/fields/DvsSecret__c.field-meta.xml
<CustomField>
    <fullName>DvsSecret__c</fullName>
    <label>DVS Secret (token retrieval)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>