force-app/main/default/objects/DvsSetting__mdt/fields/DvsTokenUrl__c.field-meta.xml
<CustomField>
    <fullName>DvsTokenUrl__c</fullName>
    <label>URL of Token DVS Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>