force-app/main/default/objects/DvsSetting__mdt/fields/DvsUrl__c.field-meta.xml
<CustomField>
    <fullName>DvsUrl__c</fullName>
    <label>URL of DVS Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>