force-app/main/default/objects/DvsSetting__mdt/fields/DvsWaitingTime__c.field-meta.xml
<CustomField>
    <fullName>DvsWaitingTime__c</fullName>
    <label>DVS Waiting Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>