force-app/main/default/objects/DvsSetting__mdt/fields/IsActif__c.field-meta.xml
<CustomField>
    <fullName>IsActif__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Actif?</label>
    <type>Checkbox</type>
</CustomField>